traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:22: error: value && is not a member of Unit
    if(estFaceMur() && getDirection()==Direction.EST){gauche();avance();gauche() && !fonctionTest()}
                                                                                 ^Snake:23: error: value && is not a member of Unit
    if(estFaceMur() && getDirection()==Direction.OUEST){droite();avance();droite() && !fonctionTest()}
                                                                                   ^