traversal.snake.Snake.scala.code
override def run() {
def fonctionTest():Boolean={
  if(estFaceMur()){
    if(getDirection()==Direction.EST){
      gauche()
      if(estFaceMur()){gauche()
                      return true }
      gauche()}
    if(getDirection()==Direction.OUEST){
      droite()
      if(estFaceMur()){gauche()
                      return true}
      gauche()
    }
    }
  return false
  }
  
  
  baisseBrosse()
  do{avance()
    if(estFaceMur() && getDirection()==Direction.EST){gauche();avance();gauche() && !fonctionTest()}
    if(estFaceMur() && getDirection()==Direction.OUEST){droite();avance();droite() && !fonctionTest()}
    }while(!fonctionTest())
  droite()
  if(!estFaceMur()){droite();droite()}
}